# midi_library

./: CMakeLists.txt
src/: CMakeLists.txt  MIDI.h  serialMIDI.h  usbMIDI.h
